header all complite

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					</div>
 					<div class="col-6">
 						<ul class="nav my-nav">
-							<li class="nav-item m-2"><a class="nav-link pt-4 pb-3 text-dark " href="home.html">Home</a></li>
+							<li class="nav-item m-2"><a class="nav-link pt-4 pb-3 text-dark " href="index.html">Home</a></li>
 							<li class="nav-item m-2"><a class="nav-link pt-4 pb-3 text-dark " href="about.html" target="_blank">About</a></li>
 							<li class="nav-item m-2"><a class="nav-link pt-4 pb-3 text-dark " href="gallery.html" target="_blank">Gallery</a></li>
 							<li class="nav-item m-2"><a class="nav-link pt-4 pb-3 text-dark " href="contact.html" target="_blank">Contact Us</a></li>
@@ -71,8 +71,13 @@
         <!--todo---------------{  Start Banner section  }---------------_-->
             <main class="banner">
 			 	<div class="row banner-bg">
-					<div class="col-4">
-
+					<div class="col-4 big-heading">
+						<div class="heading text-white text-center">
+							<h1 class="pera">Best Photo Studio</h1>
+							<h4 class="sub-heading">A high quality photography</h4>
+							<p class="px-5">Lorem, ipsum dolor adipisicing elit. Laudantium iusto tempora ipsum magni fuga quae ab! Enim repudiandae asperiores inventore. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
+							<a href="http://" class="btn btn-outline-light my-4 pera" id="my-btn-2"> Enroll Now </a>
+						</div>
 					</div>
 					<div class="col-8">
 						<img src="./assets/img/banner1.jpg" alt="Banner">
@@ -352,7 +357,7 @@
         <!--todo---------------{  My Java Script CDN  }---------------_-->
 			<script src="./assets/js/index.js"></script>
 	    <!--todo---------------{  My font Awesome Kit  }---------------_-->
-			<script src="https://kit.fontawesome.com/b1a5d11bf2.js" crossorigin="anonymous"></script>
+			<script src="https://kit.fontawesome.com/ae0f6c9748.js" crossorigin="anonymous"></script>
 	    <!--todo---------------{  Bootstrap 5 JS CDN  }---------------_-->
 			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 			<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
@@ -364,5 +369,10 @@
 
 
 <!--?---------------{  Add Description  }---------------_-->
-<!--! All style done almost without some content then it will finish  -->
+<!--! All style done almost without some content then it will finish  
+Portrait photography
+model photography
+fashion photography
+photo jornalism
+wedding photography
 <!--//---------------{  Description  }---------------_-->
