Animation section done

--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
 					</div>
 					<div class="col-6">
 						<ul class="nav my-nav">
-							<li class="nav-item m-2"><a class="nav-link pt-4 pb-3 text-dark " href="home.html">Home</a></li>
+							<li class="nav-item m-2"><a class="nav-link pt-4 pb-3 text-dark " href="index.html">Home</a></li>
 							<li class="nav-item m-2"><a class="nav-link pt-4 pb-3 text-dark " href="about.html" target="_blank">About</a></li>
 							<li class="nav-item m-2"><a class="nav-link pt-4 pb-3 text-dark " href="gallery.html" target="_blank">Gallery</a></li>
 							<li class="nav-item m-2"><a class="nav-link pt-4 pb-3 text-dark " href="contact.html" target="_blank">Contact Us</a></li>
@@ -86,8 +86,93 @@
         <!--//---------------{  Banner section  }---------------//-->
         <!--todo---------------{  Start Extra content  }---------------_-->
             <section>
-				
-			</section>
+			<!--_---------------{  article section  }---------------_-->
+				<div class="container my-5 py-5">
+					<div class="row">
+						<div class="col-6">
+							<h2 class="fw-bolder pt-2 pb-4 ml-3">Amazing Photo Gallery</h2>
+							<p class="pera-2">Consectetur adipiscing elit. Aliquam sit amet efficitur tortor.Uspendisse efficitur orci urna. In et augue ornare, tempor massa in, luctus sapien efficitur orci urna.</p>
+							<i class="fa-regular fa-square-check text-danger my-3"></i><span class=" ms-3"> Ut enim ad minim veniam</span> <br>
+							<i class="fa-regular fa-square-check text-danger"></i><span class=" ms-3"> Quis nostrud exercitation ullamco laboris</span> <br>
+							<i class="fa-regular fa-square-check text-danger my-3"></i><span class=" ms-3"> Nisi ut aliquip ex ea commodo consequat</span> <br>
+							<a href="" class="btn btn-outline-danger my-5" id="my-btn-3">View our Services</a>
+						</div>
+						<div class="col-6">
+							<img src="assets/img/about.jpg" class="img-fluid" alt="About Img">
+						</div>
+					</div>
+				</div>	
+			<!--_---------------{  details section  }---------------_-->
+				<div class="container">
+					<div class="row">
+						<div class="col-4">
+							<i class="fa-solid fa-video fa-3x text-danger ms-3"></i>
+							<h3 class="d-inline ms-3">Quality Photography</h3>
+							<p class="ms-5 ps-5 mt-3">sit, amet Qui est eum cupiditate accusamus repellendus voluptas numquam voluptates incidunt beatae corrupti. ipsum dolor, sit amet consectetur adipisicing elit.</p>
+						</div>
+						<div class="col-4">
+							<i class="fa-solid fa-camera fa-3x text-danger ms-4"></i>
+							<h3 class="d-inline ms-3">Modern Equipment</h3>
+							<p class="ms-5 ps-5 mt-3">sit, amet Qui est eum cupiditate accusamus repellendus voluptas numquam voluptates incidunt beatae corrupti. ipsum dolor, sit amet consectetur adipisicing elit.</p>
+						</div>
+						<div class="col-4 d-flex">
+							<div class="icon-1 text-danger">
+								<i class="fa-solid fa-heart "></i>
+								<i class="fa-solid fa-music"></i><br>
+								<i class="fa-solid fa-camera"></i>
+								<i class="fa-solid fa-bolt-lightning"></i>
+							</div>
+							<div class=" ">
+								<h3 class=" ms-5">Best Quality Lenses</h3>
+								<p class="ms-5 ps-5 mt-3">sit, amet Qui est eum cupiditate accusamus repellendus voluptas numquam voluptates incidunt beatae corrupti. ipsum dolor, sit amet consectetur adipisicing elit.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			<!--_---------------{  A photo gaper section  }---------------_-->
+				<div class="container my-5">
+					<div class="row">
+						<div class="col-6">
+							<p class="p-5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae, ad deserunt. Beatae vitae dolore corporis suscipit veritatis sapiente sequi. Deleniti tempore, sunt nesciunt incidunt placeat magni quidem omnis. Sequi, corrupti. Laboriosam dolores, nobis rerum quis, sequi dolor voluptas perferendis consequatur, eos est corporis nam nemo saepe. Ipsum rem blanditiis ab quam voluptate earum laboriosam! Alias natus facilis optio repellat quae distinctio excepturi quia voluptas, ipsa cum ad, vero nam, deleniti repellendus et omnis. Tenetur et corrupti accusamus dolorum nesciunt cum alias natus voluptatem repellat blanditiis aliquid voluptates dignissimos, tempore nemo perspiciatis quis nostrum hic, impedit ipsum fugiat expedita! Saepe corporis error placeat voluptates architecto repudiandae voluptatem laboriosam nostrum culpa exercitationem illo molestias distinctio, temporibus vitae, dolorem aperiam reprehenderit ipsa fugit.</p>
+						</div>
+						<div class="col-6">
+							<div class="mt-5">
+								<img src="assets/img/about2.jpg" alt="Photo gaper">
+							</div>
+						</div>
+					</div>
+				</div>
+			<!--_---------------{  Photo-gaper section  }---------------_-->
+				<div class="container">
+					<h2 class="text-center fw-bolder pt-5 pb-4">Amazing Photographers</h2>
+					<p class="pera pb-4">Nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat <br> sunt in culpa qui official.</p>
+					<div class="demo">
+						<div class="row">
+							<div class="col-3">
+								<img src="assets/img/team1.jpg" alt="Photo-gaper 1">
+								<h4 class="m-4 text-center">Daniel Roberto</h4>
+								<h6 class="ms-4">Subtitle goes here</h6>
+							</div>
+							<div class="col-3">
+								<img src="assets/img/team2.jpg" alt="Photo-gaper 3">
+								<h4 class="m-4 text-center">Richard Elison</h4>
+								<h6 class="ms-4">Subtitle goes here</h6>
+							</div>
+							<div class="col-3">
+								<img src="assets/img/team3.jpg" alt="Photo-gaper 3">
+								<h4 class="m-4 text-center">Elizabeth</h4>
+								<h6 class="ms-4">Subtitle goes here</h6>
+							</div>
+							<div class="col-3">
+								<img src="assets/img/team4.jpg" alt="Photo-gaper 4">
+								<h4 class="m-4 text-center">Robert Branson</h4>
+								<h6 class="ms-4">Subtitle goes here</h6>
+							</div>
+
+					</div>
+					</div>
+				</div>
+		</section>
         <!--//---------------{  Extra content  }---------------//-->
         <!--todo---------------{  Start Article section  }---------------_-->
 		<article>
