--- a/index.html
+++ b/index.html
@@ -94,31 +94,61 @@
 						<div class="col-4">
 							<div class="card card-1st">
 								<div class="card-head">
-									<img src="./assets/img/g1.jpg" alt="Photo 1">
+									<div class="big-img">
+										<img src="./assets/img/g1.jpg" alt="Photo 1">
+									<div class="hidden-text">
+										<h3 class="text-center fw-bolder">Portrait photography</h3>
+										<p class="">ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus, quam! ipsum dolor sit amet.</p>
+									</div>
+								</div>
 								</div>
 							</div>
 							<div class="card">
 								<div class="card-head">
-									<img src="./assets/img/g2.jpg" alt="Photo 2">
+									<div class="big-img">
+										<img src="./assets/img/g2.jpg" alt="Photo 2">
+										<div class="hidden-text" id="hidden-text-2">
+											<h3 class="text-center fw-bolder">Wedding photography</h3>
+											<p class=""> ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus, quam! ipsum dolor sit amet.</p>
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
 						<div class="col-4 card-mid">
 							<div class="card">
 								<div class="card-head">
-									<img src="./assets/img/g3.jpg" alt="Photo 3">
+									<div class="big-img">
+										<img src="./assets/img/g3.jpg" alt="Photo 3">
+										<div class="hidden-text" id="hidden-text">
+											<h3 class="text-center fw-bolder">Fashion photography</h3>
+											<p class=""> ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus, quam! ipsum dolor sit amet.</p>
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
 						<div class="col-4">
 							<div class="card card-1st">
 								<div class="card-head">
-									<img src="./assets/img/g4.jpg" alt="Photo 4">
+									<div class="big-img">
+										<img src="./assets/img/g4.jpg" alt="Photo 4">
+										<div class="hidden-text">
+											<h3 class="text-center fw-bolder">Model photography</h3>
+											<p class=""> ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus, quam! ipsum dolor sit amet.</p>
+										</div>
+									</div>
 								</div>
 							</div>
 							<div class="card">
 								<div class="card-head">
-									<img src="./assets/img/g5.jpg" alt="Photo 5">
+									<div class="big-img">
+										<img src="./assets/img/g5.jpg" alt="Photo 5">
+										<div class="hidden-text">
+											<h3 class="text-center fw-bolder">Photo journalism</h3>
+											<p class=""> ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus, quam! ipsum dolor sit amet.</p>
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -153,8 +183,9 @@
 				 </div>
 				<!--// Article section -->
 				<!-- FAQ section  -->
-				 <div class="container">
-					<h2 class="text-center fw-bolder pt-5 pb-4">Frequently Asked Questions</h2>
+				 <div class="bg-light pb-5 mt-5">
+				 <div class="container mb-4">
+					<h2 class="text-center fw-bolder pt-5 pb-5">Frequently Asked Questions</h2>
 					<div class="row">
 						<div class="col-6">
 							<div class="accordion accordion-flush" id="accordionFlushExample">
@@ -204,6 +235,7 @@
 						</div>
 					</div>
 				 </div>
+				</div>
 				<!--// FAQ section  -->
 				<!-- feedback's section  -->
 				 <div class="container">
@@ -370,9 +402,6 @@
 
 <!--?---------------{  Add Description  }---------------_-->
 <!--! All style done almost without some content then it will finish  
-Portrait photography
-model photography
-fashion photography
-photo jornalism
-wedding photography
+
+
 <!--//---------------{  Description  }---------------_-->
