editing contact page not finished

--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@
 					</div>
 				</div>	
 			<!--_---------------{  details section  }---------------_-->
-				<div class="container">
+				<div class="container mb-4">
 					<div class="row">
 						<div class="col-4">
 							<i class="fa-solid fa-video fa-3x text-danger ms-3"></i>
@@ -115,25 +115,40 @@
 							<h3 class="d-inline ms-3">Modern Equipment</h3>
 							<p class="ms-5 ps-5 mt-3">sit, amet Qui est eum cupiditate accusamus repellendus voluptas numquam voluptates incidunt beatae corrupti. ipsum dolor, sit amet consectetur adipisicing elit.</p>
 						</div>
-						<div class="col-4 d-flex">
-							<div class="icon-1 text-danger">
-								<i class="fa-solid fa-heart "></i>
-								<i class="fa-solid fa-music"></i><br>
-								<i class="fa-solid fa-camera"></i>
-								<i class="fa-solid fa-bolt-lightning"></i>
+						<div class="col-4">
+							<div class="d-inline">
+								<i class="fa-solid fa-heart text-danger"></i>
+								<i class="fa-solid fa-music text-danger"></i><br>
+								<i class="fa-solid fa-camera text-danger"></i>
+								<i class="fa-solid fa-bolt-lightning ms-1 text-danger"></i>
 							</div>
-							<div class=" ">
-								<h3 class=" ms-5">Best Quality Lenses</h3>
-								<p class="ms-5 ps-5 mt-3">sit, amet Qui est eum cupiditate accusamus repellendus voluptas numquam voluptates incidunt beatae corrupti. ipsum dolor, sit amet consectetur adipisicing elit.</p>
-							</div>
+								<h3 class="ms-3 d-inline">Best Quality Lenses</h3>
+								<p class="ms-3 ps-5 mt-3">sit, amet Qui est eum cupiditate accusamus repellendus voluptas numquam voluptates incidunt beatae corrupti. ipsum dolor, sit amet consectetur adipisicing elit.</p>
 						</div>
 					</div>
 				</div>
 			<!--_---------------{  A photo gaper section  }---------------_-->
-				<div class="container my-5">
+			<div class="bg-gaper pt-2">
+				<div class="container mt-5 mb-3">
 					<div class="row">
-						<div class="col-6">
-							<p class="p-5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae, ad deserunt. Beatae vitae dolore corporis suscipit veritatis sapiente sequi. Deleniti tempore, sunt nesciunt incidunt placeat magni quidem omnis. Sequi, corrupti. Laboriosam dolores, nobis rerum quis, sequi dolor voluptas perferendis consequatur, eos est corporis nam nemo saepe. Ipsum rem blanditiis ab quam voluptate earum laboriosam! Alias natus facilis optio repellat quae distinctio excepturi quia voluptas, ipsa cum ad, vero nam, deleniti repellendus et omnis. Tenetur et corrupti accusamus dolorum nesciunt cum alias natus voluptatem repellat blanditiis aliquid voluptates dignissimos, tempore nemo perspiciatis quis nostrum hic, impedit ipsum fugiat expedita! Saepe corporis error placeat voluptates architecto repudiandae voluptatem laboriosam nostrum culpa exercitationem illo molestias distinctio, temporibus vitae, dolorem aperiam reprehenderit ipsa fugit.</p>
+						<div class="col-1">
+							<i class="fa-solid fa-image py-5 fa-5x text-danger my-3"></i>
+							<i class="fa-solid fa-photo-film py-5 fa-5x text-danger my-4"></i>
+							<i class="fa-solid fa-video py-5 fa-5x text-danger my-3"></i>
+						</div>
+						<div class="col-5" id="text-gaper">
+							<div class="py-5 mx-4 mt-3">
+								<h3>A high quality photography</h3>
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, enim? ipsum dolor sit amet, consectetur adipisicing elit. Debitis consequatur fugit similique.</p>	
+							</div>
+							<div class="py-4 mx-4 mb-4">
+								<h3>A high quality photography</h3>
+								<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo, aperiam. ipsum dolor sit amet, consectetur adipisicing elit. Debitis consequatur fugit similique.</p>	
+							</div>
+							<div class="py-5 mx-4 mt-3">
+								<h3>A high quality photography</h3>
+								<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora, dicta! ipsum dolor sit amet, consectetur adipisicing elit. Debitis consequatur fugit similique.</p>	
+							</div>
 						</div>
 						<div class="col-6">
 							<div class="mt-5">
@@ -142,36 +157,65 @@
 						</div>
 					</div>
 				</div>
+			</div>
 			<!--_---------------{  Photo-gaper section  }---------------_-->
-				<div class="container">
-					<h2 class="text-center fw-bolder pt-5 pb-4">Amazing Photographers</h2>
-					<p class="pera pb-4">Nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat <br> sunt in culpa qui official.</p>
-					<div class="demo">
-						<div class="row">
-							<div class="col-3">
-								<img src="assets/img/team1.jpg" alt="Photo-gaper 1">
-								<h4 class="m-4 text-center">Daniel Roberto</h4>
-								<h6 class="ms-4">Subtitle goes here</h6>
-							</div>
-							<div class="col-3">
+			<div class="container mb-5 mt-3">
+				<h2 class="text-center fw-bolder pt-5 pb-4">Amazing Photographers</h2>
+				<p class="pera pb-4">Nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat <br> sunt in culpa qui official.</p>
+				<div class="demo">
+					<div class="row">
+						<div class="col-3">
+							<div class="bg-img">
+									<img src="assets/img/team1.jpg" alt="Photo-gaper 1">
+									<div class="hidden-icon text-light">
+										<i class="fa-solid fa-camera-retro fa-2x m-3"></i>
+										<i class="fa-solid fa-image fa-2x m-3"></i>
+										<i class="fa-solid fa-file fa-2x m-3"></i>
+									</div>
+								</div>
+							<h4 class="m-4 text-center">Daniel Roberto</h4>
+							<h6 class="ms-4">Subtitle goes here</h6>
+						</div>
+						<div class="col-3">
+							<div class="bg-img">
 								<img src="assets/img/team2.jpg" alt="Photo-gaper 3">
-								<h4 class="m-4 text-center">Richard Elison</h4>
-								<h6 class="ms-4">Subtitle goes here</h6>
+								<div class="hidden-icon text-light">
+									<i class="fa-solid fa-camera-retro fa-2x m-3"></i>
+									<i class="fa-solid fa-image fa-2x m-3"></i>
+									<i class="fa-solid fa-file fa-2x m-3"></i>
+								</div>
 							</div>
-							<div class="col-3">
+							<h4 class="m-4 text-center">Richard Elison</h4>
+							<h6 class="ms-4">Subtitle goes here</h6>
+						</div>
+						<div class="col-3">
+							<div class="bg-img">
 								<img src="assets/img/team3.jpg" alt="Photo-gaper 3">
-								<h4 class="m-4 text-center">Elizabeth</h4>
-								<h6 class="ms-4">Subtitle goes here</h6>
+								<div class="hidden-icon text-light">
+									<i class="fa-solid fa-camera-retro fa-2x m-3"></i>
+									<i class="fa-solid fa-image fa-2x m-3"></i>
+									<i class="fa-solid fa-file fa-2x m-3"></i>
+								</div>
 							</div>
-							<div class="col-3">
+							<h4 class="m-4 text-center">Elizabeth</h4>
+							<h6 class="ms-4">Subtitle goes here</h6>
+						</div>
+						<div class="col-3">
+							<div class="bg-img">
 								<img src="assets/img/team4.jpg" alt="Photo-gaper 4">
-								<h4 class="m-4 text-center">Robert Branson</h4>
-								<h6 class="ms-4">Subtitle goes here</h6>
+								<div class="hidden-icon text-light">
+									<i class="fa-solid fa-camera-retro fa-2x m-3"></i>
+									<i class="fa-solid fa-image fa-2x m-3"></i>
+									<i class="fa-solid fa-file fa-2x m-3"></i>
+								</div>
 							</div>
-
-					</div>
-					</div>
+							<h4 class="m-4 text-center">Robert Branson</h4>
+							<h6 class="ms-4">Subtitle goes here</h6>
+						</div>
+	
 				</div>
+				</div>
+			</div>
 		</section>
         <!--//---------------{  Extra content  }---------------//-->
         <!--todo---------------{  Start Article section  }---------------_-->
