--- a/contact.html
+++ b/contact.html
@@ -68,11 +68,63 @@
 			</div>
 		</header>
         <!--//---------------{  Header section  }---------------//-->
+        <!--todo---------------{  Start Banner section  }---------------_-->
+        <main class="about-banner">
+			<div class="img-div">
+				<img src="./assets/img/about-b.jpg" alt="About banner">
+			</div>
+			<div class="heading-div">
+				<h2>About Us</h2>
+				<nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+					<ol class="breadcrumb">
+					  <li class="breadcrumb-item"><a href="#" class="text-light">Home</a></li>
+					  <li class="breadcrumb-item active" aria-current="page" class="text-white">Library</li>
+					</ol>
+				  </nav>
+			</div>
+		</main>
+        <!--//---------------{  Banner section  }---------------//-->
         <!--todo---------------{  Start Extra content  }---------------_-->
-            <section>
-				
-			</section>
+        <section>
+		<!--_---------------{  Contact Section  }---------------_-->
+			<div class="container py-5">
+				<div class="contact-title py-4 mt-5">
+					<h1 class="text-center fw-bolder pb-3"><u>Contact us</u></h1>
+					<p class="pera">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus est pariatur alias enim sapiente <br> officia sed maxime laudantium.</p>
+				</div>
+				<div class="row">
+					<div class="col-5">
+						<h3 class="pera py-4">Contact Details</h3>
+						<div class="box">
+							<h5 class="pera-2"><i class="fa-solid fa-earth-americas text-danger"></i>&nbsp; Company Address:</h5>
+							<p class="pera-25">10001, 5th Avenue, 12202 street, USA.</p>
+						</div>
+						<div class="box py-4">
+							<h5 class="pera-2"><i class="fa-solid fa-envelope-open text-danger"></i></i>&nbsp; Call Us:</h5>
+							<p class="pera-25">+1(21) 112 7368</p>
+						</div>
+						<div class="box pb-4">
+							<h5 class="pera-2"><i class="fa-solid fa-earth-americas text-danger"></i>&nbsp; Email Us:</h5>
+							<p class="pera-25">example@mail.com</p>
+						</div>
+						<div class="box">
+							<h5 class="pera-2"><i class="fa-solid fa-headphones text-danger"></i></i>&nbsp; Customer Support:</h5>
+							<p class="pera-25">info@support.com</p>
+						</div>
+					</div>
+					<div class="col-7">
+
+					</div>
+				</div>
+			</div>
+		</section>
         <!--//---------------{  Extra content  }---------------//-->
+        <!--todo---------------{  Start Article section  }---------------_-->
+		<article class="m-0">
+		<!--_---------------{  article section  }---------------_-->
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d58144.75383522825!2d88.56496022863227!3d24.379664360194425!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39fbefa96a38d031%3A0x10f93a950ed6f410!2sRajshahi!5e0!3m2!1sen!2sbd!4v1731135231558!5m2!1sen!2sbd" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+		</article>
+		<!--//---------------{  Article section  }---------------//-->
         <!--todo---------------{  Start Footer section  }---------------_-->
 		<footer class="my-footer">
 			<div class="container">
