--- a/contact.html
+++ b/contact.html
@@ -54,9 +54,9 @@
 					<div class="col-6">
 						<ul class="nav my-nav">
 							<li class="nav-item m-2"><a class="nav-link pt-4 pb-3 text-dark " href="index.html">Home</a></li>
-							<li class="nav-item m-2"><a class="nav-link pt-4 pb-3 text-dark " href="about.html" target="_blank">About</a></li>
-							<li class="nav-item m-2"><a class="nav-link pt-4 pb-3 text-dark " href="gallery.html" target="_blank">Gallery</a></li>
-							<li class="nav-item m-2"><a class="nav-link pt-4 pb-3 text-dark " href="contact.html" target="_blank">Contact Us</a></li>
+							<li class="nav-item m-2"><a class="nav-link pt-4 pb-3 text-dark " href="about.html">About</a></li>
+							<li class="nav-item m-2"><a class="nav-link pt-4 pb-3 text-dark " href="gallery.html">Gallery</a></li>
+							<li class="nav-item m-2"><a class="nav-link pt-4 pb-3 text-dark " href="contact.html">Contact Us</a></li>
 						</ul>
 					</div>
 					<div class="col-3 nav-icon text-center">
@@ -77,8 +77,8 @@
 				<h2>About Us</h2>
 				<nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
 					<ol class="breadcrumb">
-					  <li class="breadcrumb-item"><a href="#" class="text-light">Home</a></li>
-					  <li class="breadcrumb-item active" aria-current="page" class="text-white">Library</li>
+					  <li class="breadcrumb-item"><a href="index.html" class="text-light">Gallery</a></li>
+					  <li class="breadcrumb-item active" aria-current="page" class="text-white">Contact Us</li>
 					</ol>
 				  </nav>
 			</div>
@@ -87,23 +87,24 @@
         <!--todo---------------{  Start Extra content  }---------------_-->
         <section>
 		<!--_---------------{  Contact Section  }---------------_-->
-			<div class="container py-5">
-				<div class="contact-title py-4 mt-5">
-					<h1 class="text-center fw-bolder pb-3"><u>Contact us</u></h1>
-					<p class="pera">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus est pariatur alias enim sapiente <br> officia sed maxime laudantium.</p>
+		<div class="contact-bg">
+			<div class="container mt-4 pb-5">
+				<div class="contact-title">
+					<h1 class="text-center fw-bolder pb-3 pt-5"><u>Contact us</u></h1>
+					<p class="pera pb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus est pariatur alias enim sapiente <br> officia sed maxime laudantium.</p>
 				</div>
 				<div class="row">
 					<div class="col-5">
-						<h3 class="pera py-4">Contact Details</h3>
+						<h3 class="pera-2 py-5">Contact Details</h3>
 						<div class="box">
 							<h5 class="pera-2"><i class="fa-solid fa-earth-americas text-danger"></i>&nbsp; Company Address:</h5>
 							<p class="pera-25">10001, 5th Avenue, 12202 street, USA.</p>
 						</div>
-						<div class="box py-4">
+						<div class="box py-5">
 							<h5 class="pera-2"><i class="fa-solid fa-envelope-open text-danger"></i></i>&nbsp; Call Us:</h5>
 							<p class="pera-25">+1(21) 112 7368</p>
 						</div>
-						<div class="box pb-4">
+						<div class="box pb-5">
 							<h5 class="pera-2"><i class="fa-solid fa-earth-americas text-danger"></i>&nbsp; Email Us:</h5>
 							<p class="pera-25">example@mail.com</p>
 						</div>
@@ -113,22 +114,39 @@
 						</div>
 					</div>
 					<div class="col-7">
-
+						<h3 class="pera py-4">Contact form</h3>
+						<form action="">
+							<input class="form-control" type="text" placeholder="Enter Your Name ..." aria-label="default input example"><br>
+							<input class="form-control" type="email" placeholder="Enter Your Email ..." aria-label="default input example" required><br>
+							<input class="form-control" type="tel" placeholder="Enter Your Number ..." aria-label="default input example" maxlength="11" minlength="11" pattern="\d" required><br>
+							<input class="form-control" type="text" placeholder="Enter Your Website URL..." aria-label="default input example"><br>
+							<input class="form-control" type="text" placeholder="Enter What's the Subject" aria-label="default input example"><br>
+							<textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Please Type your massage ..."></textarea>
+							<div class="form-check m-2">
+								<input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" required>
+								<label class="form-check-label my-label" for="flexCheckDefault">
+								  Please All information is ok!!
+								</label>
+							  </div>
+							  <button type="submit" class="btn btn-outline-danger mt-4 my-btn " onclick="alert('your Data is submitted')">Submit</button>
+						</form>
 					</div>
 				</div>
 			</div>
+		</div>
 		</section>
         <!--//---------------{  Extra content  }---------------//-->
         <!--todo---------------{  Start Article section  }---------------_-->
 		<article class="m-0">
 		<!--_---------------{  article section  }---------------_-->
+		<h2 class="text-center fw-bolder py-5"><u>Our Location</u></h2>
 			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d58144.75383522825!2d88.56496022863227!3d24.379664360194425!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39fbefa96a38d031%3A0x10f93a950ed6f410!2sRajshahi!5e0!3m2!1sen!2sbd!4v1731135231558!5m2!1sen!2sbd" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		</article>
 		<!--//---------------{  Article section  }---------------//-->
         <!--todo---------------{  Start Footer section  }---------------_-->
 		<footer class="my-footer">
 			<div class="container">
-				<div class="footer p-4 ">
+				<div class="footer p-4">
 					<div class="footer-title">
 						<div class="row">
 							<div class="col-5">
