--- a/gallery.html
+++ b/gallery.html
@@ -54,9 +54,9 @@
 					<div class="col-6">
 						<ul class="nav my-nav">
 							<li class="nav-item m-2"><a class="nav-link pt-4 pb-3 text-dark " href="index.html">Home</a></li>
-							<li class="nav-item m-2"><a class="nav-link pt-4 pb-3 text-dark " href="about.html" target="_blank">About</a></li>
-							<li class="nav-item m-2"><a class="nav-link pt-4 pb-3 text-dark " href="gallery.html" target="_blank">Gallery</a></li>
-							<li class="nav-item m-2"><a class="nav-link pt-4 pb-3 text-dark " href="contact.html" target="_blank">Contact Us</a></li>
+							<li class="nav-item m-2"><a class="nav-link pt-4 pb-3 text-dark " href="about.html" >About</a></li>
+							<li class="nav-item m-2"><a class="nav-link pt-4 pb-3 text-dark " href="gallery.html" >Gallery</a></li>
+							<li class="nav-item m-2"><a class="nav-link pt-4 pb-3 text-dark " href="contact.html" >Contact Us</a></li>
 						</ul>
 					</div>
 					<div class="col-3 nav-icon text-center">
@@ -68,9 +68,261 @@
 			</div>
 		</header>
         <!--//---------------{  Header section  }---------------//-->
+		<!--todo---------------{  Start Banner section  }---------------_-->
+        <main class="about-banner mb-5">
+			<div class="img-div">
+				<img src="./assets/img/about-b.jpg" alt="About banner">
+			</div>
+			<!--_---------------{  breadcrumb section  }---------------_-->
+			<div class="heading-div">
+				<h2>About Us</h2>
+				<nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+					<ol class="breadcrumb">
+					  <li class="breadcrumb-item"><a href="index.html" class="text-light">Home</a></li>
+					  <li class="breadcrumb-item active" aria-current="page" class="text-white">Gallery</li>
+					</ol>
+				</nav>
+			</div>
+		</main>
+        <!--//---------------{  Banner section  }---------------//-->
         <!--todo---------------{  Start Extra content  }---------------_-->
             <section>
-				
+			<!--_---------------{  better place section  }---------------_-->
+				<div class="container py-5 ">
+					<div class="row">
+						<div class="col-6 gw-img">
+							<img src="./assets/img/GW.jpg" width="100%" alt="better place">
+						</div>
+						<div class="col-6">
+							<div class="ms-5">
+								<h2 class="py-3">Making world a better place</h2>
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste nesciunt, numquam laborum, labore eum, quia totam quidem ad vero dolores officiis temporibus?</p>
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi minima voluptatum, cum quibusdam harum aspernatur fugiat ullam nisi rerum. Perspiciatis, cumque dolorem corporis omnis molestiae neque, maiores cupiditate commodi illum at fuga. Vero, molestias quibusdam.</p>
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa incidunt quos dolorum?</p>
+								<a href="" class="btn btn-outline-danger mt-4" id="my-btn-3">Learn More</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<hr>
+			<!--_---------------{  Photo Gallery section  }---------------_-->
+				<div class="container mb-5">
+					<h2 class="py-3 text-center fw-bolder fa-3x"><u> Photo Gallery</u></h2>
+					<div class="row my-card">	
+						<div class="col-4">
+							<div class="card card-mid">
+								<div class="card-head">
+									<div class="big-img">
+										<img src="./assets/gallery/g11.jpg" alt="Photo 1">
+									<div class="hidden-text">
+										<h3 class="text-center fw-bolder"></h3>
+									</div>
+								</div>
+								</div>
+							</div>
+							<div class="card card-mid mt-4">
+								<div class="card-head">
+									<div class="big-img">
+										<img src="./assets/gallery/g3.jpg" alt="Photo 1">
+									<div class="hidden-text">
+										<h3 class="text-center fw-bolder"></h3>
+									</div>
+								</div>
+								</div>
+							</div>
+							<div class="card mt-4">
+								<div class="card-head">
+									<div class="big-img">
+										<img src="./assets/gallery/g5.jpg" alt="Photo 2">
+										<div class="hidden-text" id="hidden-text-2">
+											<h3 class="text-center fw-bolder"></h3>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="card mt-4">
+								<div class="card-head">
+									<div class="big-img">
+										<img src="./assets/gallery/g13.jpg" alt="Photo 2">
+										<div class="hidden-text" id="hidden-text-2">
+											<h3 class="text-center fw-bolder"></h3>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-4">
+							<div class="card card-mid">
+								<div class="card-head">
+									<div class="big-img">
+										<img src="./assets/gallery/g2.jpg" alt="Photo 1">
+									<div class="hidden-text">
+										<h3 class="text-center fw-bolder"></h3>
+									</div>
+								</div>
+								</div>
+							</div>
+							<div class="card mt-4">
+								<div class="card-head">
+									<div class="big-img">
+										<img src="./assets/gallery/g9.jpg" alt="Photo 2">
+										<div class="hidden-text" id="hidden-text-2">
+											<h3 class="text-center fw-bolder"></h3>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="card mt-4">
+								<div class="card-head">
+									<div class="big-img">
+										<img src="./assets/gallery/g1.jpg" alt="Photo 2">
+										<div class="hidden-text" id="hidden-text-2">
+											<h3 class="text-center fw-bolder"></h3>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="card card-mid mt-4">
+								<div class="card-head">
+									<div class="big-img">
+										<img src="./assets/gallery/g10.jpg" alt="Photo 1">
+									<div class="hidden-text">
+										<h3 class="text-center fw-bolder"></h3>
+									</div>
+								</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-4 ">
+							<div class="card card-mid">
+								<div class="card-head">
+									<div class="big-img">
+										<img src="./assets/gallery/g6.jpg" alt="Photo 1">
+									<div class="hidden-text">
+										<h3 class="text-center fw-bolder"></h3>
+									</div>
+								</div>
+								</div>
+							</div>
+							<div class="card card-mid mt-4">
+								<div class="card-head">
+									<div class="big-img">
+										<img src="./assets/gallery/g4.jpg" alt="Photo 1">
+									<div class="hidden-text">
+										<h3 class="text-center fw-bolder"></h3>
+									</div>
+								</div>
+								</div>
+							</div>
+							<div class="card mt-4">
+								<div class="card-head">
+									<div class="big-img">
+										<img src="./assets/gallery/g12.jpg" alt="Photo 2">
+										<div class="hidden-text" id="hidden-text-2">
+											<h3 class="text-center fw-bolder"></h3>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="card mt-4">
+								<div class="card-head">
+									<div class="big-img">
+										<img src="./assets/gallery/g14.jpg" alt="Photo 2">
+										<div class="hidden-text" id="hidden-text-2">
+											<h3 class="text-center fw-bolder"></h3>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			<!--_---------------{  services section  }---------------_-->
+			<div class="services-bg py-5">
+				<div class="container">
+					<h2 class="pt-3 text-center fw-bolder">We Provide best services</h2>
+					<p class="text-center mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas libero alias veniam voluptatibus voluptatum <br> eaque nemo quam mollitia voluptates. Officia.</p>
+					<div class="full-box">
+						<div class="row my-services">
+							<div class="col-4">
+								<div class="card">
+									<div class="card-body ms-3">
+										<div class="my-4 text-center">
+											<i class="fa-solid fa-camera-retro fa-3x text-danger"></i>
+											<h4 class="pt-4 pera">Portrait Photography</h4>
+										</div>
+										<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, iste est.</p>
+										<a href="about.html">Read more</a>										
+									</div>
+								</div>
+								<div class="card mt-3">
+									<div class="card-body ms-3">
+										<div class="my-4 text-center">
+											<i class="fa-solid fa-baby fa-3x text-danger"></i>
+											<h4 class="pt-4 pera">Baby Photography</h4>
+										</div>
+										<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, iste est.</p>
+										<a href="about.html">Read more</a>										
+									</div>
+								</div>
+							</div>
+							<div class="col-4">
+								<div class="card">
+									<div class="card-body ms-3">
+										<div class="my-4 text-center">
+											<i class="fa-solid fa-ring fa-3x text-danger"></i>
+											<h4 class="pt-4 pera">Wedding Photography</h4>
+										</div>
+										<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, iste est.</p>
+										<a href="about.html">Read more</a>										
+									</div>
+								</div>
+								<div class="card mt-3">
+									<div class="card-body ms-3">
+										<div class="my-4 text-center">
+											<i class="fa-solid fa-drum fa-3x text-danger"></i>
+											<h4 class="pt-4 pera">Event Photography</h4>
+										</div>
+										<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, iste est.</p>
+										<a href="about.html">Read more</a>										
+									</div>
+								</div>
+							</div>
+							<div class="col-4">
+								<div class="card">
+									<div class="card-body ms-3">
+										<div class="my-4 text-center">
+											<i class="fa-solid fa-bolt-lightning fa-3x text-danger"></i>
+											<h4 class="pt-4 pera">Fashion Photography</h4>
+										</div>
+										<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, iste est.</p>
+										<a href="about.html">Read more</a>										
+									</div>
+								</div>
+								<div class="card mt-3">
+									<div class="card-body ms-3">
+										<div class="my-4 text-center">
+											<i class="fa-brands fa-canadian-maple-leaf fa-3x text-danger"></i>
+											<h4 class="pt-4 pera">Nature Photography</h4>
+										</div>
+										<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, iste est.</p>
+										<a href="about.html">Read more</a>										
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					</div>
+			</div>
+			<!--_---------------{  Enroll section  }---------------_-->
+			<div class="container my-5">
+				<h2 class="text-center pt-5">have you ready to click your beatifull <br> Photography?</h2>
+				<p class="pera pb-5" id="p-title">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet sit eligendi maxime corrupti, voluptate voluptatem placeat mollitia maiores. <br>  Dolor fugit dolore maiores veritatis est cupiditate?</p>
+				<div class="btn-group" id="btn-group">
+					<a href="" class="btn btn-outline-danger mx-2">Buy Now ...</a>
+					<a href="" class="btn btn-outline-danger">Get Started</a>
+				</div>
+			</div>
 			</section>
         <!--//---------------{  Extra content  }---------------//-->
         <!--todo---------------{  Start Footer section  }---------------_-->
