--- a/about.html
+++ b/about.html
@@ -54,9 +54,9 @@
 					<div class="col-6">
 						<ul class="nav my-nav">
 							<li class="nav-item m-2"><a class="nav-link pt-4 pb-3 text-dark " href="index.html">Home</a></li>
-							<li class="nav-item m-2"><a class="nav-link pt-4 pb-3 text-dark " href="about.html" target="_blank">About</a></li>
-							<li class="nav-item m-2"><a class="nav-link pt-4 pb-3 text-dark " href="gallery.html" target="_blank">Gallery</a></li>
-							<li class="nav-item m-2"><a class="nav-link pt-4 pb-3 text-dark " href="contact.html" target="_blank">Contact Us</a></li>
+							<li class="nav-item m-2"><a class="nav-link pt-4 pb-3 text-dark " href="about.html">About</a></li>
+							<li class="nav-item m-2"><a class="nav-link pt-4 pb-3 text-dark " href="gallery.html">Gallery</a></li>
+							<li class="nav-item m-2"><a class="nav-link pt-4 pb-3 text-dark " href="contact.html">Contact Us</a></li>
 						</ul>
 					</div>
 					<div class="col-3 nav-icon text-center">
@@ -73,12 +73,13 @@
 				<div class="img-div">
 					<img src="./assets/img/about-b.jpg" alt="About banner">
 				</div>
-				<div class="heading-div">
+			<!--_---------------{  breadcrumb section  }---------------_-->
+			<div class="heading-div">
 					<h2>About Us</h2>
 					<nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
 						<ol class="breadcrumb">
-						  <li class="breadcrumb-item"><a href="#" class="text-light">Home</a></li>
-						  <li class="breadcrumb-item active" aria-current="page" class="text-white">Library</li>
+						  <li class="breadcrumb-item"><a href="index.html" class="text-light">Home</a></li>
+						  <li class="breadcrumb-item active" aria-current="page" class="text-white">About</li>
 						</ol>
 					  </nav>
 				</div>
@@ -87,7 +88,7 @@
         <!--todo---------------{  Start Extra content  }---------------_-->
             <section>
 			<!--_---------------{  article section  }---------------_-->
-				<div class="container my-5 py-5">
+				<div class="container my-5 pt-5">
 					<div class="row">
 						<div class="col-6">
 							<h2 class="fw-bolder pt-2 pb-4 ml-3">Amazing Photo Gallery</h2>
@@ -102,8 +103,23 @@
 						</div>
 					</div>
 				</div>	
+			<!--_---------------{  best photography section  }---------------_-->
+				<div class="container mb-5">
+					<div class="row">
+						<div class="col-6">
+							<img src="./assets/img/service1.jpg" width="100%" alt="best photography">
+						</div>
+						<div class="col-6">
+							<div class="ms-3">
+								<h2>A high quality and best photography</h2>
+								<br><br><br>
+								<h3> !--{add progress bar }-- </h3>
+							</div>
+						</div>
+					</div>
+				</div>
 			<!--_---------------{  details section  }---------------_-->
-				<div class="container mb-4">
+				<!-- <div class="container my-4">
 					<div class="row">
 						<div class="col-4">
 							<i class="fa-solid fa-video fa-3x text-danger ms-3"></i>
@@ -126,7 +142,7 @@
 								<p class="ms-3 ps-5 mt-3">sit, amet Qui est eum cupiditate accusamus repellendus voluptas numquam voluptates incidunt beatae corrupti. ipsum dolor, sit amet consectetur adipisicing elit.</p>
 						</div>
 					</div>
-				</div>
+				</div> -->
 			<!--_---------------{  A photo gaper section  }---------------_-->
 			<div class="bg-gaper pt-2">
 				<div class="container mt-5 mb-3">
